--- a/src/components/Comentarios/Card.css
+++ b/src/components/Comentarios/Card.css
@@ -8,7 +8,7 @@
     transition: all 0.7s linear;
 }
 
-.card-body{
+.card-bodyy{
     padding: 2rem 0 !important;
     background: #7CA0AF;
     
@@ -19,9 +19,3 @@
     font-size: 1.1rem;
 }
 
-.fondo{
-
-    height: 100vh;
-    background: rgb(124,160,175);
-    background: linear-gradient(158deg, rgba(124,160,175,1) 13%, rgba(69,216,231,1) 38%, rgba(69,157,231,1) 66%, rgba(34,126,237,1) 80%);
-}
